--- a/web/chat-frontend/src/App.css
+++ b/web/chat-frontend/src/App.css
@@ -16,7 +16,6 @@ form {
 
 
 button {
-  padding: 10px;
   height: 3em;
   background: #9147FF;
   border-radius: 5px;
@@ -25,14 +24,12 @@ button {
   border: none;
 }
 .message-field {
-  margin-right: 5px;
+  margin-right: 10px;
 }
-.message {
- 
-}
+
 .render-chat {
   overflow-y: scroll;
-  margin: 5px;
+  margin: 2px;
   border-radius: 5px;
   padding: 20px;
   background-color: #F6F6F6;
@@ -47,6 +44,15 @@ span {
   color: black;
 }
 
-@media only screen and (min-width: 800px) {
-
+@media only screen and (max-width: 800px) {
+  form {
+    flex-direction: column;
+  }
+  .message-field {
+    margin: 10px;
+  }
+  button {
+    width: fit-content;
+    margin-left: 10px;
+  }
 }
