--- a/web/chat-frontend/src/App.css
+++ b/web/chat-frontend/src/App.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;800&display=swap');
 .card {
   margin: 30px;
   min-height: 20rem;
 }
 .title {
   text-align: center;
+  font-family: Nunito;
 }
 form {
   display: flex;
@@ -13,8 +15,12 @@ form {
   padding: 20px;
   background-color: #F6F6F6;
 }
-
-
+h3 {
+  font-family: nunito;
+}
+.chat-message {
+  padding-left: 5px;
+}
 button {
   height: 3em;
   background: #9147FF;
